# airport-loyalty

./: .gitignore  Airport.sln  README.md  airport-loyalty-v2.drawio  airport-loyalty.drawio  docker-compose.yml  users.json
Airport.Backend/: Airport.Backend.csproj  Airport.Backend.csproj.DotSettings  Dockerfile  Program.cs  appsettings.Development.json
Airport.Backend/Endpoints/: AuthEndpoints.cs  FlightDtos.cs  FlightsEndpoints.cs  RetailEndpoints.cs  StatisticsEnpoints.cs  UsersEndpoints.cs
Airport.Backend/Endpoints/Requests/: RoleDto.cs  SignInRequest.cs  SignUpRequest.cs
Airport.Backend/Properties/: launchSettings.json
Airport.Backend/Utils/: FluentValidationExtensions.cs  IJwtService.cs  IPasswordHasher.cs
Airport.Model/: Airport.Model.csproj  AirportDbContext.cs
Airport.Model/Flights/: Airline.cs  Airplane.cs  AirplaneModel.cs  Airport.cs  Flight.cs  Gate.cs  RowClass.cs
Airport.Model/Products/: PriceChange.cs  Product.cs  PurchasedProduct.cs  PurchasedTicket.cs  TicketProduct.cs  Transaction.cs
Airport.Model/Users/: Role.cs  User.cs
airport-frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
airport-frontend/src/: app.d.ts  hooks.server.ts
docker/: docker-compose.traefik.yml  docker-compose.yml
docker/traefik_providers/: dynamic.yaml
migrations/: 2023110101.flights-ddl.sql  2023110601.flights-data.sql  2023111601.users-ddl.sql  2023111602.staff-ddl.sql  2023112201.products-ddl.sql  2023120701.flights-update.sql
scripts/: pyproject.toml
scripts/airports-initialize/: main.py  translations.json
secrets/: .env
(+61 files in other folders)
