[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["martynov <callmemars111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.29.0"
requests = "^2.31.0"
translate = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

